NXP-26895: Cleanup / Format